# CellularAutomata

./: CMakeLists.txt
src/: GameOfLife.cpp  GameOfLife.hpp  main.cpp
